<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.fiap.placarapp.MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_titulo"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tvDesenvolvidoPor"
        android:layout_below="@+id/tvTitulo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTimeCasa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_casa"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etTimeCasa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_nome"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvTimeVisitante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_visitante"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edTimeVisitante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_nome"
            android:textSize="14sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="comecarJogo"
            android:text="@string/comecar_jogo" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDesenvolvidoPor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/label_desenvolvido_por"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>
